# rtt_coman

./: CMakeLists.txt  LOG.TXT  README.md
config/: config.yaml
include/: control_modes.h  force_torque_sensor.h  imu_sensor.h  kinematic_chain.h  parser.h  rtt_coman.hpp
include/test/: motor_controller_test.h
orocos_script/: coman_bring_up.ops  coman_bring_up_ros.ops  coman_mc_test.ops  coman_no_forearms_bring_up.ops  coman_no_forearms_bring_up_ros.ops  coman_no_forearms_mc_test.ops
script/: config_rt.yaml  rtnet.sh
src/: force_torque_sensor.cpp  imu_sensor.cpp  kinematic_chain.cpp  parser.cpp  rtt_coman.cpp
src/test/: motor_controller_test.cpp
